# RM_TRAIN

./: .gitignore  README.md
task1-Ubuntu_config/: CMakeLists.txt  README.md  main.cpp
task2-OpenCV_Project/: CMakeLists.txt  README.md
task2-OpenCV_Project/src/: detect.cpp  main.cpp  tune.cpp
task3-ceres/: CMakeLists.txt  REAMME.md
task3-ceres/src/: main.cpp  test1.cpp  test2.cpp
task4-hik_camera/: CMakeLists.txt  README.md  package.xml
task4-hik_camera/launch/: hik_rviz.launch.py
task4-hik_camera/rviz/: hik.rviz
task4-hik_camera/src/: hik_camera_node.cpp
task5-armor_detect/: CMakeLists.txt  README.md  package.xml
task5-armor_detect/checkpoint/: lenet.pt
task5-armor_detect/model/: export.py  make_label.py  train.py
task5-armor_detect/src/: armor_detect.cpp
